fixed spacing, added lines

--- a/Evan-Site.CSS
+++ b/Evan-Site.CSS
@@ -3,6 +3,7 @@ html{
     background-color: #f28950;
 }
 h2 {
+
     font-family: 'Fira Sans', sans-serif;
     font-size: 40px;
     text-align: center;
@@ -13,7 +14,7 @@ h3{
     color: #f28950;
 }
 body {
-    height: 100%;
+    height: 700px;
     border: 10px solid #f28950;
     font-family: 'Open Sans Condensed', sans-serif;
     padding: 1px 100px;
@@ -67,9 +68,52 @@ button{
   border-radius: 12px;
   height: 400px;
   width: 700px;
+  position: absolute;
+  left: 100px;
 }
 
-.hl {
+.hl1 {
+    position: absolute;
     border: 3px solid #f28950;
-    width: 600px;
+    width: 650px;
+    top: 116.5px;
+    left: 0px;
+}
+.hl2 {
+    position: absolute;
+    border: 3px solid #f28950;
+    width: 646px;
+    top: 116.5px;
+    right: 0px;
+}
+.vl {
+    position: absolute;
+    border: 3px solid #f28950;
+    height: 250px;
+    top: 400px;
+    right: 500px;
+}
+.dot1 {
+    position: absolute;
+  height: 25px;
+  width: 25px;
+  background-color: white;
+  border: 15px;
+  border-radius: 20px;
+  display: inline-block;
+    border-color: #f28950;
+    right: 491px;
+    top: 500px;
+}
+.dot2 {
+    position: absolute;
+  height: 25px;
+  width: 25px;
+  background-color: #f28950;
+  border-radius: 50%;
+  display: inline-block;
+  border: 3px;
+    border-color: #f28950;
+    right: 491px;
+    bottom: 200px;
 }
